Fix: fix code style